--- a/qtwebkit/Source/JavaScriptCore/CMakeLists.txt
+++ b/qtwebkit/Source/JavaScriptCore/CMakeLists.txt
@@ -1286,6 +1286,7 @@ elseif (WTF_CPU_PPC64LE)
 elseif (WTF_CPU_S390)
 elseif (WTF_CPU_S390X)
 elseif (WTF_CPU_MIPS)
+elseif (WTF_CPU_LOONGARCH64)
 elseif (WTF_CPU_SH4)
 elseif (WTF_CPU_X86)
 elseif (WTF_CPU_X86_64)
