--- a/qtwebengine/src/3rdparty/chromium/content/browser/BUILD.gn
+++ b/qtwebengine/src/3rdparty/chromium/content/browser/BUILD.gn
@@ -166,6 +166,7 @@ jumbo_static_library("browser") {
     "//components/services/storage/dom_storage:local_storage_proto",
     "//components/services/storage/public/cpp",
     "//components/services/storage/public/mojom",
+    "//components/spellcheck:buildflags",
     "//components/system_media_controls",
     "//components/tracing:startup_tracing",
     "//components/ui_devtools",
