--- a/qtwebengine/src/3rdparty/chromium/components/webcrypto/BUILD.gn
+++ b/qtwebengine/src/3rdparty/chromium/components/webcrypto/BUILD.gn
@@ -62,6 +62,7 @@ static_library("webcrypto") {
     "//crypto",
     "//crypto:platform",
     "//third_party/blink/public:blink_headers",
+    "//third_party/blink/renderer/platform/heap:heap",
   ]
 }
 
